--- a/src/app/pages/checkout/checkout-summary/checkout-summary.component.html
+++ b/src/app/pages/checkout/checkout-summary/checkout-summary.component.html
@@ -30,7 +30,7 @@
         <span>{{ product.name }}</span>
       </div>
       <div class="summary-row">
-        <span class="total">البراند</span>
+        <span class="total">العلامةالتجارية</span>
 
         <span>{{ product.brand }}</span>
       </div>
