--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -292,7 +292,7 @@
                 <div class="detail-item">
                   <i class="fas fa-palette"></i>
                   <div class="detail-content">
-                    <span class="detail-label">البراند</span>
+                    <span class="detail-label">العلامة التجارية</span>
                     <span class="detail-value">{{ product.brand }}</span>
                   </div>
                 </div>
