--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6">
-        <h1 class="display-4 fw-bold mb-4 fade-in">
+        <!-- <h1 class="display-4 fw-bold mb-4 fade-in">
           قطع غيار ومكونات العوفي الأصلية
         </h1>
         <p class="lead mb-4 fade-in">
@@ -25,7 +25,7 @@
           src="/products/p3.jpg"
           alt="معدات كاتربيلر"
           class="img-fluid rounded shadow-lg slide-in-right"
-        />
+        /> -->
       </div>
     </div>
   </div>
